Fixed styling of pricing card on mobile

--- a/web/src/components/DevicePricing/device-pricing.scss
+++ b/web/src/components/DevicePricing/device-pricing.scss
@@ -29,7 +29,7 @@
 /* Mobile views */
 @media (max-width: 750px) {
     .device-pricing { 
-        min-width: 320px !important;
+        min-width: 100% !important;
         margin: auto !important;
     }
 }
